--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
+    "axios": "^1.8.3",
     "dotenv": "^16.4.7",
     "next": "15.2.2",
     "node-fetch": "^2.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
     "ts-node": "^10.9.2"
   },
